--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-    <script src="moment.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
@@ -28,29 +27,66 @@
         <h1 class="display-3">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
         <p id="currentDay" class="lead"></p>
-        
-<!-- var button = <a href="#" class="btn btn-sm btn-danger" role="button" aria-pressed="true">Save</a> -->
+
+        <!-- var button = <a href="#" class="btn btn-sm btn-danger" role="button" aria-pressed="true">Save</a> -->
 
     </header>
     <div class="container">
         <div class="card" style="width: 50rem;">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">9:00 AM</li><button id="save" value="save" onclick="myFunction()">Save</button>
-              <li class="list-group-item">10:00 AM</li><button id="save" value="save" onclick="myFunction()">Save</button>
-              <li class="list-group-item">11:00 AM</li><button id="save" value="save" onclick="myFunction()">Save</button>
-              <li class="list-group-item">12:00 PM</li><button id="save" value="save" onclick="myFunction()">Save</button>
-              <li class="list-group-item">1:00 PM</li><button id="save" value="save" onclick="myFunction()">Save</button>
-              <li class="list-group-item">2:00 PM</li><button id="save" value="save" onclick="myFunction()">Save</button>
-              <li class="list-group-item">3:00 PM</li><button id="save" value="save" onclick="myFunction()">Save</button>
-              <li class="list-group-item">4:00 PM</li><button id="save" value="save" onclick="myFunction()">Save</button>
-              <li class="list-group-item">5:00 PM</li><button id="save" value="save" onclick="myFunction()">Save</button>
+                <li class="9am">
+                    <span>9:00 AM</span>
+                    <input type ="text"/>
+                    <button class="save" id="9am" value="save">Save</button>
+                </li>
+                <li class="10am">
+                    <span>10:00 AM</span>
+                    <input type ="text"/>
+                    <button class="save" id="10am" value="save">Save</button>
+                </li>
+                <li class="11am">
+                    <span>11:00 AM</span>
+                    <input type ="text"/>
+                    <button class="save" id="11am" value="save">Save</button>
+                </li>
+                <li class="12pm">
+                    <span>12:00 PM</span>
+                    <input type ="text"/>
+                    <button class="save" id="12pm" value="save">Save</button>
+                </li>
+                <li class="1pm">
+                    <span>1:00 PM</span>
+                    <input type ="text"/>
+                    <button class="save" id="1pm" value="save">Save</button>
+                </li>
+                <li class="2pm">
+                    <span>2:00 PM</span>
+                    <input type ="text"/>
+                    <button class="save" id="2pm" value="save">Save</button>
+                </li>
+                <li class="3pm">
+                    <span>3:00 PM</span>
+                    <input type ="text"/>
+                    <button class="save" id="3pm" value="save">Save</button>
+                </li>
+                <li class="4pm">
+                    <span>4:00 PM</span>
+                    <input type ="text"/>
+                    <button class="save" id="4pm" value="save">Save</button>
+                </li>
+                <li class="5pm">
+                    <span>5:00 PM</span>
+                    <input type ="text"/>
+                    <button class="save" id="5pm" value="save">Save</button>
+                </li>
             </ul>
-          </div>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    
+    <script src="./script.js"></script>
+
 </body>
 
 </html>
