updated card size

--- a/index.html
+++ b/index.html
@@ -32,49 +32,49 @@
 
     </header>
     <div class="container">
-        <div class="card" style="width: 50rem;">
+        <div class="card" style="width: 25rem;">
             <ul class="list-group list-group-flush">
-                <li class="9am">
+                <li class="list-group-item 9am">
                     <span>9:00 AM</span>
                     <input type ="text"/>
                     <button class="save" id="9am" value="save">Save</button>
                 </li>
-                <li class="10am">
+                <li class="list-group-item 10am">
                     <span>10:00 AM</span>
                     <input type ="text"/>
                     <button class="save" id="10am" value="save">Save</button>
                 </li>
-                <li class="11am">
+                <li class="list-group-item 11am">
                     <span>11:00 AM</span>
                     <input type ="text"/>
                     <button class="save" id="11am" value="save">Save</button>
                 </li>
-                <li class="12pm">
+                <li class="list-group-item 12pm">
                     <span>12:00 PM</span>
                     <input type ="text"/>
                     <button class="save" id="12pm" value="save">Save</button>
                 </li>
-                <li class="1pm">
+                <li class="list-group-item 1pm">
                     <span>1:00 PM</span>
                     <input type ="text"/>
                     <button class="save" id="1pm" value="save">Save</button>
                 </li>
-                <li class="2pm">
+                <li class="list-group-item 2pm">
                     <span>2:00 PM</span>
                     <input type ="text"/>
                     <button class="save" id="2pm" value="save">Save</button>
                 </li>
-                <li class="3pm">
+                <li class="list-group-item 3pm">
                     <span>3:00 PM</span>
                     <input type ="text"/>
                     <button class="save" id="3pm" value="save">Save</button>
                 </li>
-                <li class="4pm">
+                <li class="list-group-item 4pm">
                     <span>4:00 PM</span>
                     <input type ="text"/>
                     <button class="save" id="4pm" value="save">Save</button>
                 </li>
-                <li class="5pm">
+                <li class="list-group-item 5pm">
                     <span>5:00 PM</span>
                     <input type ="text"/>
                     <button class="save" id="5pm" value="save">Save</button>
