--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
             </ul>
         </div>
     </div>
+    <div class="cardFooter text-center">
+        <div class="card-body">
+          <p class="card-text">Copyright&#9400 C.Cressey</p>
+        </div>
+      </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
