--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     </header>
     <div class="container">
-        <div class="card" style="width: 25rem;">
+        <div class="card" style="width: 25rem">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item 9am">
                     <span>9:00 AM</span>
