--- a/index.html
+++ b/index.html
@@ -32,61 +32,63 @@
 
     </header>
     <div class="container">
-        <div class="card" style="width: 25rem">
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item 9am">
-                    <span>9:00 AM</span>
-                    <input type ="text"/>
-                    <button class="save" id="9am" value="save">Save</button>
-                </li>
-                <li class="list-group-item 10am">
-                    <span>10:00 AM</span>
-                    <input type ="text"/>
-                    <button class="save" id="10am" value="save">Save</button>
-                </li>
-                <li class="list-group-item 11am">
-                    <span>11:00 AM</span>
-                    <input type ="text"/>
-                    <button class="save" id="11am" value="save">Save</button>
-                </li>
-                <li class="list-group-item 12pm">
-                    <span>12:00 PM</span>
-                    <input type ="text"/>
-                    <button class="save" id="12pm" value="save">Save</button>
-                </li>
-                <li class="list-group-item 1pm">
-                    <span>1:00 PM</span>
-                    <input type ="text"/>
-                    <button class="save" id="1pm" value="save">Save</button>
-                </li>
-                <li class="list-group-item 2pm">
-                    <span>2:00 PM</span>
-                    <input type ="text"/>
-                    <button class="save" id="2pm" value="save">Save</button>
-                </li>
-                <li class="list-group-item 3pm">
-                    <span>3:00 PM</span>
-                    <input type ="text"/>
-                    <button class="save" id="3pm" value="save">Save</button>
-                </li>
-                <li class="list-group-item 4pm">
-                    <span>4:00 PM</span>
-                    <input type ="text"/>
-                    <button class="save" id="4pm" value="save">Save</button>
-                </li>
-                <li class="list-group-item 5pm">
-                    <span>5:00 PM</span>
-                    <input type ="text"/>
-                    <button class="save" id="5pm" value="save">Save</button>
-                </li>
-            </ul>
+            <div class="card" style="width: 30rem">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item 9" >
+                        <span>9:00 AM</span>
+                        <input type="text"  class="9" />
+                        <button class="save" id="9" value="save">Save</button>
+                    </li>
+                    <li class="list-group-item 10">
+                        <span>10:00 AM</span>
+                        <input type="text"  class="10"/>
+                        <button class="save" id="10" value="save">Save</button>
+                    </li>
+                    <li class="list-group-item 11">
+                        <span>11:00 AM</span>
+                        <input type="text"  class="11"/>
+                        <button class="save" id="11" value="save">Save</button>
+                    </li>
+                    <li class="list-group-item 12">
+                        <span>12:00 PM</span>
+                        <input type="text"  class="12"/>
+                        <button class="save" id="12" value="save">Save</button>
+                    </li>
+                    <li class="list-group-item 13">
+                        <span>1:00 PM</span>
+                        <input type="text" class="13" />
+                        <button class="save" id="13" value="save">Save</button>
+                    </li>
+                    <li class="list-group-item 14">
+                        <span>2:00 PM</span>
+                        <input type="text" class="14" />
+                        <button class="save" id="14" value="save">Save</button>
+                    </li>
+                    <li class="list-group-item 15">
+                        <span>3:00 PM</span>
+                        <input type="text" class="15" />
+                        <button class="save" id="15" value="save">Save</button>
+                    </li>
+                    <li class="list-group-item 16">
+                        <span>4:00 PM</span>
+                        <input type="text" class="16" />
+                        <button class="save" id="16" value="save">Save</button>
+                    </li>
+                    <li class="list-group-item 17">
+                        <span>5:00 PM</span>
+                        <input type="text" class="17" />
+                        <button class="save" id="17" value="save">Save</button>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
+
     <div class="cardFooter text-center">
         <div class="card-body">
-          <p class="card-text">Copyright&#9400 C.Cressey</p>
+            <p class="card-text">Copyright&#9400 C.Cressey</p>
         </div>
-      </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
